# retnet

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: cmake-linux-platform.yml
cmake/: function.cmake  intrin.cmake  mkl.cmake
header/: dtype.h
header/macro/: constant.h  device.h  initialization.h
header/operation/: vector_op.h
includes/: block.h  dtype.h  logging.h  tensor.h
includes/layer/: group_norm.hpp  linear.hpp  module.hpp
includes/layer/transformer/: attention.hpp  transformer_decoder.hpp  transformer_encoder.hpp
includes/macro/: constant.h
includes/matrix/: matrix_op_fp32.h
includes/quant/: 8bit.h  qoperation.h  qtype.h
includes/vector/: vector_op_fp32.h  vector_op_q8.h
includes/vector_op/: vector_op_fp16.h  vector_op_fp32.h  vector_op_q8.h
src/: logging.c  tensor.c
src/layer/: linear.cpp
src/matrix/: matrix_op_fp32.c
src/operation/: vector_op.c
src/quant/: 8bit.c  qoperation.c
src/vector/: vector_op_fp16.c  vector_op_fp32.c  vector_op_q8.c
src/vector_op/: vector_op_fp16.c  vector_op_fp32.c  vector_op_q8.c
